# kios

./: testopai.py
experiments/demo/: human_in_the_loop_syncrun.py
experiments/gearset1/: closure_test.py
experiments/move/: simple_scene.json  simple_world_state.json  test.py
kios_bt_planning/: CMakeLists.txt
kios_bt_planning/kios_bt/: bt_factory.py
kios_bt_planning/kios_utils/: visualisation.dot
simulation/: package.xml  ros2.py  test_simulation.launch.py  test_simulation.py
